[project]
name = "comfy-link"
description = "Bridge Adobe Photoshop and ComfyUI by sending canvas and mask data to ComfyUI workflows and returning the result back to Photoshop."
version = "1.2.1"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/ihorpankin/comfyui-link"
Documentation = "https://github.com/ihorpankin/comfyui-link#readme"
"Bug Tracker" = "https://github.com/ihorpankin/comfyui-link/issues"

[tool.comfy]
PublisherId = "ihorpankin"
DisplayName = "Comfy Link"
Icon = "https://raw.githubusercontent.com/ihorpankin/comfyui-link/master/photoshop/icons/icon.png"
